# live-bootcamp-project

./: README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-10d1cd628d9578da537c682d88b651da593d8ad70c1a1f2e5924be49d13284ce.json
auth-service/src/: app_state.rs  domain.rs  lib.rs  main.rs  services.rs
auth-service/src/domain/: data_stores.rs  email.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hash_map_user_store.rs  hash_set_banned_token_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hash_map_user_store.rs  hash_set_banned_token_store.rs  hashmap_two_fa_code_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
