[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.7.2"
axum-extra = { version = "0.9.2", features = ["cookie"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
uuid = { version = "1.18.0", features = ["v4", "serde"]}
validator = "0.16.1"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
thiserror = "1.0.58"
color-eyre = "0.6.3"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[dev-dependencies]
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6.0"

